--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Page Title</title>
+	<title>HMS</title>
 	</head>
 	<body>
-
+    <h1>HMS</h1>
 
 	</body>
 </html>
