--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	<head>
 	<title>HMS</title>
 	</head>
 	<body>
-    <h1>HMS</h1>
-		<p> This is your lesson in git </p>
-		<p>My lesson in git</p>
+      <h1>HMS</h1>
+      <ul class="nav">
+      	<li>Home</li>
+      	<li>News</li>
+      	<li>Shop</li>
+      	<li>User pages</li>
+      	<li>Gallery</li>
+      	<li>LARP</li>
+      	<li>The Forum</li>
+      	<li>The Tower</li>
+      </ul>
 	</body>
 </html>
