--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" type="text/css" href="stylesheets/css/main.css">
 	<head>
-	<title>HMS</title>
+	  <title>HMS</title>
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
-	<body>
-      <h1>HMS</h1>
-      <ul class="nav">
-      	<li>Home</li>
-      	<li>News</li>
-      	<li>Shop</li>
-      	<li>User pages</li>
-      	<li>Gallery</li>
-      	<li>LARP</li>
-      	<li>The Forum</li>
-      	<li>The Tower</li>
-      </ul>
-	</body>
+	  <body>
+			<div class="navbar">
+			  <div class="navbar-inner">
+			    <a class="brand" href="#">Title</a>
+			    <ul class="nav">
+			      <li class="active"><a href="#">Home</a></li>
+			      <li><a href="#">Link</a></li>
+			      <li><a href="#">Link</a></li>
+			    </ul>
+			  </div>
+			</div>
+	  </body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 </html>
