--- a/page3.html
+++ b/page3.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <title>HMS</title>
+    <title>Page 3</title>
   </head>
   <body>
     <header>
@@ -19,37 +19,37 @@
 	        <span class="navbar-toggler-icon"></span>
 	        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="page1.html">Page 1</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="page2.html">Page 2</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="page3.html">Page 3</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="page4.html">Page 4</a>
-			      </li>
-			      <li class="nav-item dropdown">
-			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          Dropdown
-			        </a>
-			      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			        <a class="dropdown-item" href="#">Action</a>
-			        <a class="dropdown-item" href="#">Another action</a>
-			        <div class="dropdown-divider"></div>
-			        <a class="dropdown-item" href="#">Something else here</a>
-			      </div>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link disabled" href="#">Disabled</a>
-			      </li>
-			    </ul>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page1.html">Page 1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page2.html">Page 2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Page 3</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="page4.html">Page 4</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown
+              </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -58,8 +58,8 @@
       </nav>
     </header>
     <div class="row">
-    	<div class ="blue col-sm-6">Test</div>
-    	<div class ="blue col-sm-6">Test2</div>
+    	<div class ="blue col-sm-6">You are on Page 3</div>
+    	<div class ="blue col-sm-6">You are on Page 3</div>
     </div>
   </body>
 </html>
