--- a/hmsfamily.html
+++ b/hmsfamily.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <title>Home</title>
+    <title>HMS Family</title>
   </head>
   <body>
     <header>
@@ -20,8 +20,8 @@
 	        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
+			      <li class="nav-item">
+			        <a class="nav-link" href="index.html">Home</a>
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link" href="news.html">News</a>
@@ -33,11 +33,11 @@
 			        <a class="nav-link" href="tabletop.html">Tabletop Roleplay</a>
 			      </li>
 			      <li class="nav-item dropdown">
-			        <a class="nav-link dropdown-toggle" href="larp.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			        <a class="nav-link active dropdown-toggle" href="larp.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			          LARP
 			        </a>
 			      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			        <a class="dropdown-item" href="hmsfamily.html">H.M.S.Family</a>
+			        <a class="dropdown-item" href="">H.M.S.Family <span class="sr-only">(current)</span></a>
 			      </div>
 			      </li>
 			      <li class="nav-item">
@@ -55,9 +55,8 @@
       </nav>
     </header>
     <div class="row">
-    	<div class ="blue col-sm-6">Home Page</div>
-    	<div class ="blue col-sm-6">Home Page</div>
+    	<div class ="blue col-sm-6">HMS Larp Page</div>
+    	<div class ="blue col-sm-6">HMS Larp Page</div>
     </div>
-
   </body>
 </html>
