--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         </div>
       </nav>
     </header>
-    <div class="row">
-    	<div class ="blue col-sm-6">Home Page</div>
-    	<div class ="blue col-sm-6">Home Page</div>
+    <div class="wrapper">
+      <div class="row">
+    	  <div class ="blue col-sm-6">Home Page</div>
+    	  <div class ="blue col-sm-6">Home Page</div>
+      </div>
     </div>
-
   </body>
 </html>
