added more divs

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         </div>
       </nav>
     </header>
-    <div class="wrapper">
-      <div class="row">
-    	  <div class ="blue col-sm-6">Home Page</div>
-    	  <div class ="blue col-sm-6">Home Page</div>
-      </div>
+    <div class="wrapper row">
+    	<div class ="blue col-sm-6">Home Page</div>
+    	<div class ="blue col-sm-6">Home Page</div>
+    	<div class ="red col-sm-6">This is a Div</div>
+    	<div class = "green col-sm-6">So is this</div>
     </div>
   </body>
 </html>
