--- a/tabletop.html
+++ b/tabletop.html
@@ -57,6 +57,8 @@
     <div class="row">
     	<div class ="blue col-sm-6">Tabletop Page</div>
     	<div class ="blue col-sm-6">Tabletop Page</div>
+     	<div class ="red col-sm-6">This is a Div</div>
+    	<div class = "green col-sm-6">So is this</div>
     </div>
   </body>
 </html>
